--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-PORT=6000
-DB_URI='mongodb+srv://mrrafat:mrrafat1234@cluster0.vjex8it.mongodb.net/multi-vendor'
-JWT_KEY='SecretKey'
-SMTP_USERNAME='coderrafat@gmail.com'
-SMTP_PASSWORD='gmlekuoyqarywijm'
+PORT=
+DB_URI=
+JWT_KEY=
+SMTP_USERNAME=
+SMTP_PASSWORD=
